two processes for com and vid

--- a/tcp-server/Makefile
+++ b/tcp-server/Makefile
@@ -4,13 +4,19 @@ CC_FLAGS=-Wall
 L=-lfreenect_sync
 I=-I/usr/local/include/libfreenect
 
-all: server
+all: vid_server com_server
 
-server: tcp_server.o roombalib.o switchChar.o
-	${CC} ${CC_FLAGS} ${I} tcp_server.o roombalib.o switchChar.o -o server ${L}
+clean:
+	rm -rf *.o vid_server com_server
 
-tcp_server.o: tcp_server.c
-	${CC} ${CC_FLAGS} ${I} -c tcp_server.c ${L}
+vid_server: tcp_server.c roombalib.o switchChar.o
+	${CC} ${CC_FLAGS} -DMODE_COM ${I} tcp_server.c roombalib.o switchChar.o -o vid_server ${L}
+
+com_server: tcp_server.c roombalib.o switchChar.o
+	${CC} ${CC_FLAGS} -DMODE_VID ${I} tcp_server.c roombalib.o switchChar.o -o com_server ${L}
+
+#tcp_server.o: tcp_server.c
+#	${CC} ${CC_FLAGS} ${I} -c tcp_server.c ${L}
 
 switchChar.o: switchChar.c roombalib.o
 	${CC} ${CC_FLAGS} -c switchChar.c
