--- a/android-client/AndroidManifest.xml
+++ b/android-client/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="15" />
-
+	<uses-permission android:name="android.permission.INTERNET" />
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
@@ -24,5 +24,4 @@
             android:theme="@android:style/Theme.Dialog" >
         </activity>
     </application>
-
 </manifest>
