--- a/android_tcp_stream_test/AndroidManifest.xml
+++ b/android_tcp_stream_test/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     
-    <uses-sdk android:minSdkVersion="14" />
+    <uses-sdk android:minSdkVersion="13" />
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -14,6 +14,10 @@
         <activity
             android:name=".Android_tcp_stream_testActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="TextEntryActivity"
+            android:theme="@android:style/Theme.Dialog" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
