--- a/android_tcp_stream_test/AndroidManifest.xml
+++ b/android_tcp_stream_test/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:label="@string/app_name" >
         <activity
             android:name=".Android_tcp_stream_testActivity"
+            android:configChanges="orientation"
+    		android:screenOrientation="portrait"
             android:label="@string/app_name" >
         </activity>
         <activity
